# ygg-torznab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ygg_torznab/: config.py  main.py
src/ygg_torznab/adapters/cloudflare/: cf_clearance.py
src/ygg_torznab/adapters/nostr/: categories.py  client.py  magnet.py  parser.py
src/ygg_torznab/adapters/torznab/: router.py  xml_builder.py
src/ygg_torznab/adapters/ygg/: categories.py  client.py  scraper.py
src/ygg_torznab/domain/: models.py  ports.py
tests/: test_categories.py  test_cf_clearance.py  test_client.py  test_magnet.py  test_main.py  test_nostr_client.py  test_parser.py  test_router.py  test_scraper.py  test_xml_builder.py  test_ygg_client.py
tests/fixtures/: search_inception.html
